# sqlite3-wrapper

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: main.yml
min-sqlite3-sys/: Cargo.toml  README.md  build.rs
min-sqlite3-sys/src/: bindings.rs  connection.rs  core.rs  ehandle.rs  lib.rs  operations.rs  prelude.rs  statement.rs
sqlite3-builder/: Cargo.toml  README.md  build.rs
sqlite3-builder/src/: lib.rs
sqlite3-sys/: Cargo.toml  build.rs
sqlite3-sys/src/: bindings.rs  connection.rs  core.rs  lib.rs  operations.rs  statement.rs
