[package]
name = "min-sqlite3-sys"
version = "1.3.2"
edition = "2021"
build = "./build.rs"
crate-type = "dylib"
authors = ["Onur Ozkan <contact@onurozkan.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lodpm/sqlite3-wrapper"
documentation = "http://docs.rs/min-sqlite3-sys"
homepage = "https://lodpm.com"
description = "zero dependency, tiny sqlite3 wrapper built for lodpm"
categories = ["database", "sqlite", "sqlite3", "embedded-db"]
keywords = ["database", "sqlite", "sqlite3", "embedded-db"]

[lib]
doctest = false

[dependencies]
sqlite3-builder = { version = "3.38.6", path = "../sqlite3-builder" }

