[package]
name = "sqlite3-builder"
version = "3.38.7"
edition = "2021"
build = "./build.rs"
authors = ["Onur Ozkan <contact@onurozkan.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lodpm/sqlite3-wrapper"
homepage = "https://github.com/lodpm/sqlite3-wrapper"
description = "zero dependency, tiny sqlite3 wrapper built for lodpm"
categories = ["database", "sqlite", "sqlite3", "embedded-db"]
keywords = ["database", "sqlite", "sqlite3", "embedded-db"]

[lib]
doctest = false

[dependencies]
